--- a/style.css
+++ b/style.css
@@ -12,8 +12,10 @@
     padding: 0 80px;
     margin: auto;
 }
+
 /*navbar styling*/
 .navbar {
+    /* margin-left: -20px; */
     position: fixed;
     width: 100%;
     padding: 30px 0;
@@ -66,6 +68,15 @@
     color: #fff;
 }
 
+/* menu button styling */
+.menu-btn {
+    color: #fff;
+    font-size: 23px;
+    cursor: pointer;
+    display: none;
+}
+
+
 /* home section styling*/
 .home {
     display: flex;
@@ -77,7 +88,7 @@
 }
 
 .home .max-width {
-    margin: auto 0 auto 40px;
+    margin: auto 0 auto 80px;
 }
 
 .home .home-content .text-1{
@@ -98,4 +109,78 @@
 .home .home-content .text-3 span {
     color: crimson;
     font-weight: 500;
+}
+
+/* responsive media query start */
+@media(max-width: 1104px){
+    .home .max-width{
+        margin-left: 0px;
+    }
+}
+
+@media(max-width: 991px){
+    .max-width{
+        padding: 0 50px;
+    }
+}
+
+@media(max-width: 947px) {
+    .max-width {
+        padding: 0 50px;
+    }
+    .menu-btn {
+        display: block;
+        z-index: 999;
+    }
+    .menu-btn i.active:before {
+        content: "\f00d";
+    }
+    .navbar .menu {
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: #111;
+        text-align: center;
+        padding-top: 80px ;
+        transition: all 0.3s ease;
+    }
+    .navbar .menu.active {
+        left: 0;
+    }
+    .navbar .menu li {
+        display: block;
+    }
+    .navbar .menu li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+    .home .home-content .text-2{
+        font-size: 70px;
+    }    
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+    
+    @media(max-width: 690px){
+        .max-width{
+            padding: 0 23px;
+        }
+        .home .home-content .text-2{
+            font-size: 60px;
+        }    
+        .home .home-content .text-3{
+            font-size: 30px;
+        }
+    }
+    @media(max-width: 500px){
+        .home .home-content .text-2{
+            font-size: 50px;
+        }    
+        .home .home-content .text-3{
+            font-size: 25px;
+        }
+    }
 }
