--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
 *{
+    top: 0;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -15,9 +16,9 @@
 
 /*navbar styling*/
 .navbar {
-    /* margin-left: -20px; */
     position: fixed;
     width: 100%;
+    z-index: 999;
     padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.3s ease;
@@ -35,6 +36,7 @@
 }
 
 .navbar .logo a{
+    margin-right: 1rem;
     color: #fff;
     font-size: 35px;
     font-weight: 600;
@@ -111,10 +113,118 @@
     font-weight: 500;
 }
 
+.home .home-content a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+
+.home .home-content a:hover{
+    color: crimson;
+    background: none;
+}
+
+/* about section styling */
+section{
+    padding: 100px 0;
+}
+.about {
+    font-family: 'Poppins', sans-serif;
+
+}
+.about .title {
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu', sans-serif;
+}
+.about .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+
+.about .title::after{
+    content: "who i am";
+    font-size: 20px;
+    position: absolute;
+    bottom: -7px;
+    left: 50%;
+    padding: 5px;
+    background: #fff;
+    color: crimson;
+    transform: translateX(-50%);
+}
+.about .about-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.about .about-content .left{
+    width: 45%;
+}
+.about .about-content .left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+.about .about-content .right{
+    width: 55%;
+}
+.about .about-content .right .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.about .about-content .right .text .span{
+    color: crimson;
+}
+.about .about-content .right p{
+    text-align: justify;
+}
+.about .about-content .right a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 36px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+
+}
+.about .about-content .right a:hover{
+    color: crimson;
+    background: none;
+}
 /* responsive media query start */
-@media(max-width: 1104px){
+@media(max-width: 1300px){
     .home .max-width{
         margin-left: 0px;
+    }
+}
+@media(max-width: 1104px){
+    .about .about-content .left img{
+        height: 350px;
+        width: 350px;
     }
 }
 
@@ -163,24 +273,46 @@
     .home .home-content .text-3{
         font-size: 32px;
     }
-    
-    @media(max-width: 690px){
-        .max-width{
-            padding: 0 23px;
-        }
-        .home .home-content .text-2{
-            font-size: 60px;
-        }    
-        .home .home-content .text-3{
-            font-size: 30px;
-        }
+    .home .home-content a {
+        font-size: 23px;
+        padding: 10px 30px;
     }
-    @media(max-width: 500px){
-        .home .home-content .text-2{
-            font-size: 50px;
-        }    
-        .home .home-content .text-3{
-            font-size: 25px;
-        }
+    .max-width {
+        max-width: 800px;
+    }
+    .about .about-content .column{
+        width: 50%;
+    }
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right{
+        flex: 100%;
     }
 }
+    
+@media(max-width: 690px){
+    .max-width{
+        padding: 0 23px;
+    }
+    .home .home-content .text-2{
+        font-size: 60px;
+    }    
+    .home .home-content .text-3{
+        font-size: 30px;
+    }
+    .home .home-content a {
+        font-size: 20px;
+    }
+}
+@media(max-width: 500px){
+    .home .home-content .text-2{
+        font-size: 50px;
+    }    
+    .home .home-content .text-3{
+        font-size: 25px;
+    }
+}
+
