--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@
 /* home section styling*/
 .home {
     display: flex;
-    background: url("images/banner.jpg") no-repeat center;
+    background: url("images/img-6.jpg") no-repeat center;
+    background-size: cover;
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -130,15 +131,23 @@
     background: none;
 }
 
-/* about section styling */
+
+/* all similar styles */
 section{
     padding: 100px 0;
 }
-.about {
+.about, .skills {
     font-family: 'Poppins', sans-serif;
 
 }
-.about .title {
+.about .about-content,
+.skills .skills-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+section .title {
     position: relative;
     text-align: center;
     font-size: 40px;
@@ -147,7 +156,7 @@ section{
     padding-bottom: 20px;
     font-family: 'Ubuntu', sans-serif;
 }
-.about .title::before{
+section .title::before{
     content: "";
     position: absolute;
     bottom: 0px;
@@ -158,23 +167,22 @@ section{
     transform: translateX(-50%);
 }
 
-.about .title::after{
-    content: "who i am";
+section .title::after{
     font-size: 20px;
     position: absolute;
-    bottom: -7px;
+    bottom: -13px;
     left: 50%;
     padding: 5px;
     background: #fff;
     color: crimson;
     transform: translateX(-50%);
 }
-.about .about-content{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
+
+/* about section styling */
+.about .title::after{
+    content: "who i am";
 }
+
 .about .about-content .left{
     width: 45%;
 }
@@ -215,6 +223,92 @@ section{
     color: crimson;
     background: none;
 }
+
+/* skills section styling */
+.skills{
+    color: #fff;
+    background: rgb(44, 43, 43);
+}
+.skills .title::before{
+    background: #fff;
+}
+.skills .title::after{
+    background: rgb(44, 43, 43);
+    content: "what i know"
+}
+.skills .skills-content .column{
+    width: calc(50% - 30px);
+}
+.skills .skills-content .left .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.skills .skills-content .left p{
+    text-align: justify;
+}
+.skills .skills-content .left a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 16px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+
+}
+.skills .skills-content .left a:hover{
+    color:crimson;
+    background: none;
+}
+.skills .skills-content .right .bars{
+    margin-bottom: 15px;
+}
+.skills .skills-content .right .info{
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+.skills .skills-content .right span{
+    font-weight: 500;
+    font-size: 18px;
+}
+.skills .skills-content .right .line{
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: crimson;
+}
+.skills .skills-content .right .html::before{
+    width: 90%;
+}
+.skills .skills-content .right .css::before{
+    width: 60%;
+}
+.skills .skills-content .right .js::before{
+    width: 70%;
+}
+.skills .skills-content .right .php::before{
+    width: 80%;
+}
+
+
+
+
+
+
 /* responsive media query start */
 @media(max-width: 1300px){
     .home .max-width{
@@ -290,6 +384,10 @@ section{
     }
     .about .about-content .right{
         flex: 100%;
+    }
+    .skills .skills-content .column{
+        width: 100%;
+        margin-bottom: 25px;
     }
 }
     
