--- a/style.css
+++ b/style.css
@@ -151,19 +151,30 @@ html{
 
 .home .home-content a{
     display: inline-block;
-    background: crimson;
+    background: rgb(26, 25, 25);
+    /* opacity: 0.5; */
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid gray;
     transition: all 0.3s ease;
 }
 
 .home .home-content a:hover{
-    color: crimson;
+    color: white;
     background: none;
+}
+
+.home .home-content .social a{
+    margin-right: 1rem;
+    background: none;
+    padding: 8px;
+    border: none;
+    /* color: #fff; */
+    font-size: 40px;
+    font-weight: 600;
 }
 
 
@@ -210,7 +221,7 @@ section .title::after{
     left: 50%;
     padding: 5px;
     background: #fff;
-    color: crimson;
+    color: rgb(80, 80, 80);
     transform: translateX(-50%);
 }
 
@@ -244,19 +255,20 @@ section .title::after{
 }
 .about .about-content .right a{
     display: inline-block;
-    background: crimson;
+    background: rgb(41, 41, 41);
     color: #fff;
+    /* opacity: 0.8; */
     font-size: 20px;
     font-weight: 500;
     padding: 10px 36px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid gray;
     transition: all 0.3s ease;
-
 }
 .about .about-content .right a:hover{
-    color: crimson;
+    box-shadow: 0 10px 36px rgba(0,0,0,.15);
+    color: black;
     background: none;
 }
 
@@ -285,19 +297,19 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: crimson;
+    background: rgb(107, 106, 106);
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid rgb(36, 36, 36);
     transition: all 0.3s ease;
 
 }
 .skills .skills-content .left a:hover{
-    color:crimson;
+    color:gray;
     background: none;
 }
 .skills .skills-content .right .bars{
@@ -325,7 +337,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: crimson;
+    background: rgb(22, 121, 134);
 }
 .skills .skills-content .right .html::before{
     width: 90%;
@@ -385,6 +397,7 @@ section .title::after{
 .portfolio__img{
     width: 100%;
     transition: .4s;
+    max-height: 200px;
 }
 .portfolio__data{
     padding: 1.5rem;
@@ -428,7 +441,7 @@ section .title::after{
     padding: 5px;
 }
 .button-link:hover{
-    background: crimson;
+    background: darkgray;
 }
 
 
@@ -460,7 +473,7 @@ section .title::after{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: crimson;
+    color: rgb(20, 113, 220);
 }
 .contact .contact-content .info .head{
     font-weight: 500;
@@ -514,8 +527,8 @@ section .title::after{
 .contact .right form .blutton button{
     width: 100%;
     height: 100%;
-    border: 2px solid crimson;
-    background: crimson;
+    border: 2px solid rgb(54, 54, 54);
+    background: rgb(46, 46, 46);
     color: #fff;
     outline: none;
     font-size: 20px;
@@ -525,7 +538,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .contact .right form .blutton button:hover{
-    color: crimson;
+    color: rgb(19, 18, 18);
     background: none;
 }
 
@@ -665,6 +678,19 @@ footer span a:hover{
     }    
     .home .home-content .text-3{
         font-size: 25px;
+    }
+    .about .about-content .right .text{
+        /* display: none; */
+        font-size: 18px;
+        font-weight: 600;
+        margin-bottom: 10px;
+    }
+}
+@media(max-width: 335px){
+    .about .about-content .right .text{
+        font-size: 15px;
+        font-weight: 600;
+        margin-bottom: 10px;
     }
 }
 
